adds a few aliases

--- a/TomServo/tomcat-users.xml.j2
+++ b/TomServo/tomcat-users.xml.j2
@@ -32,8 +32,10 @@
 
   <role rolename="tomcat"/>
   <role rolename="role1"/>
-  <user username="tomcat" password="tomcat" roles="tomcat,manager-gui"/>
+  <user username="{{ user_name}}" password="{{ password }}" roles="tomcat,manager-gui"/>
+<!--
   <user username="both" password="tomcat" roles="tomcat,role1"/>
   <user username="role1" password="tomcat" roles="role1"/>
+-->
 
 </tomcat-users>
